--- a/src/modules/show/components/Poster/style.css
+++ b/src/modules/show/components/Poster/style.css
@@ -5,12 +5,11 @@
   padding: 0.5rem 0;
 }
 
-.ratings li {
+.ratings .rating-item {
   display: inline-flex;
   align-items: center;
   justify-content: center;
-  width: 49%;
-  margin: 0;
+  margin: 1rem 0;
 }
 
 .rating-container {
