--- a/src/modules/core/components/NavBar/style.css
+++ b/src/modules/core/components/NavBar/style.css
@@ -68,38 +68,11 @@
   font-size: 1rem;
 }
 
-@media screen and (min-width: 320px) and (max-width: 425px) {
-  /* .sidenav-container {
-    width: 55px;
-
-  }
-  
-  .sidenav-text-container {
-    display: none;
-  } */
-}
-
-@media screen and (min-width: 426px) and (max-width: 768px) {
-  /* .sidenav-container {
-    width: 55px;
-  }
-  
-  .sidenav-text-container {
-    display: none;
-  } */
-}
-
-@media screen and (min-width: 769px) and (max-width: 1024px) {
-  /* .sidenav-container {
-    width: 150px;
-  }
-
-  .sidenav-text-container {
-    font-size: 0.85rem;
-  } */
-}
-
 @media screen and (max-width: 1024px) {
+  .sidenav-container {
+    width: 0px;
+  }
+
   #topnav {
     display: block;
   }
