Added view all episodes page

--- a/src/modules/show/components/RecentEpisode/style.css
+++ b/src/modules/show/components/RecentEpisode/style.css
@@ -59,7 +59,7 @@
   }
 }
 
-@media screen and (min-width: 426px) {
+@media screen and (min-width: 426px) and (max-width: 1024px) {
   .recent-episode-poster-container {
     height: 12.5rem;
   }
